# python-delayed-import

./: pyproject.toml
src/delayed_import/: __init__.py  core.py  lazy_module.py
tests/: test_delayed_imports.py
tests/package1/: mod1.py
tests/package1/package2/: __init__.py  mod2.py
