[project]
name = "delayed-import"
version = "0.1.0"
description = "A Python library that lets you delay module imports to when the import is used."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lazy-object-proxy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
