[project]
name = "delayed-import"
dynamic = ["version"]
description = "A Python library that lets you delay module imports to when the import is used."
authors = [
  {name = "Nardi Lam", email = "mail@nardilam.nl"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lazy-object-proxy>=1.11.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",

  "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
